--- a/sample.html
+++ b/sample.html
@@ -88,6 +88,28 @@
 
     nav ul li:hover {
         background-color: #106910; }
+
+
+        aside {
+        text-align: center; 
+        margin: 20px auto; 
+        }
+    aside ul {
+        list-style: none; 
+        padding: 0;
+        margin: 0;
+        display: inline-block; 
+    }
+
+    aside ul li {
+        display: inline-block; 
+        margin: 10px; 
+    }
+
+    aside ul li a img {
+        display: block;
+        margin: 0 auto; 
+    }
       </style>
 <body>
    <h1>N O T H I N G</h1>
